--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <div id="topnav"> <!--Navigation Bar linking different parts of the final Project.--> 
 	<a class="active" href="index.html">Home</a> <!--Hyperlink to Home Page, currently selected. --> 
-	<a href="houseprices.html">House Prices</a> <!--House Prices page. -->
-	<a href="http://bit.ly/2VMz8pL">Lancaster Heritage Plaques</a> <!--Lancaster Heritage Plaques page. -->
+ 	<a href="model1summary.html">Field Python</a> <!--Python Model 1 page. -->
+	<a href="model2summary.html">Student Python</a> <!--Python Model 2 page. -->
  	<a href="https://github.com/gy19cp">GitHub Profile</a>
 </div>
 
@@ -41,14 +41,6 @@
 	involved "Identification of Informal Settlements across the city of Buenos Aires, Argentina using ENVI Rule-Based Classification". This course covered 
 	the use of ArcMap, QGIS, SPSS, Tableau, R and Erdas Imagine.</p>
 		
-	<p>Current work includes a 15,000 word Dissertation entitled "Digital Divide: Mapping the Geodemographics of Internet Accessibility across Great Britain".</p> 
- 	
-	<p>She was previously awarded a <b>first class</b> BSc Geography degree. Her dissertation focussed on 
-   	"Potentially Harmful Elements due to Metal Mining contamination in Cononley Beck, a tributary of the River Aire, North Yorkshire". All work can be made 
-	available upon request. She completed this alongside six modules including an advanced GIS and Remote Sensing 
-   	course, where 92% was awarded upon course completion. This course covered the use of ArcMap and extensions: Model Builder and 
-   	Network Analyst alongside ArcGlobe and ArcScene.</p> 
-  	<p>Upon graduating Claire is hoping to enter the Geospatial sector.</p>
 </div>
 
 	<div class = "footer"><p><b>Contact Me! </b><a href="https://outlook.live.com/owa/"><b>gy19cp</b> at <b>leeds</b> dot <b>ac</b> dot <b>uk</b></a>
