--- a/index.html
+++ b/index.html
@@ -31,20 +31,14 @@
 <noscript>JavaScript required. This web browser does not support JavaScript or JavaScript in this web browser not enabled. See web browser help to enable
  JavaScript or find out if your web browser supports JavaScript.</noscript> <!--Shows user when and why Javascript is not working.-->
 
-	<p>This Portfolio was created to showcase selected pieces of work using coding created during an MSc Geographical Information Systems at the 
-		University of Leeds and subsequent projects.</p>
-	
 	<h2>About</h2>
-	<p>Claire is a current MSc Geographical Information Systems (GIS) student at the University of Leeds (2019-2020). Modules chosen 
-	comprise of <b>Web-based</b> GIS, <b>Geodemographics</b> and Neighbourhood Analysis, <b>Data Visualisation</b> and Analysis, Programming for Geographical
-	Information Analysis: Core Skills and Digital Image Processing for Environmental <b>Remote Sensing</b>. A Personal and Professional Development project
-	involved "Identification of Informal Settlements across the city of Buenos Aires, Argentina using ENVI Rule-Based Classification". This course covered 
-	the use of ArcMap, QGIS, SPSS, Tableau, R and Erdas Imagine.</p>
+	<p>This Portfolio was created to showcase selected pieces of work completed in Python created during an MSc Geographical Information Systems at the 
+		University of Leeds. Software, Spyder and Anaconda 3, were used to create these interactive Python Models. Follow the steps on the following
+		pages to make the 2 separate models work.</p>
 		
 </div>
 
-	<div class = "footer"><p><b>Contact Me! </b><a href="https://outlook.live.com/owa/"><b>gy19cp</b> at <b>leeds</b> dot <b>ac</b> dot <b>uk</b></a>
-	<img src="/images/rocket.png" alt="Rocket" style="width:1.5%;"></p>
+	<div class = "footer"><p><img src="/images/rocket.png" alt="Rocket" style="width:1.5%;"></p>
 </div>
 
 </body>
