--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
  JavaScript or find out if your web browser supports JavaScript.</noscript> <!--Shows user when and why Javascript is not working.-->
 
 	<h2>About</h2>
-	<p>This Portfolio was created to showcase selected pieces of work completed in Python created during an MSc Geographical Information Systems at the 
-		University of Leeds. Software, Spyder and Anaconda 3, were used to create these interactive Python Models. Follow the steps on the following
+	<p>This Portfolio was created to showcase selected pieces of work completed in <b>Python</b> created during an MSc Geographical Information Systems at the 
+		University of Leeds. Software, <b>Spyder</b> and <b>Anaconda 3</b>, were used to create these interactive Python Models. Follow the steps on the following
 		pages to make the 2 separate models work.</p>
 		
 </div>
