--- a/model1summary.html
+++ b/model1summary.html
@@ -56,7 +56,7 @@
         <b>web-scraping</b>.</li>  
 </ul> 
 
-<div class = "footer"><p>Launched 2020<img src="/images/rocket.png" alt="Rocket" style="width:1.5%;"></p>
+<div class = "footer"><p><img src="/images/rocket.png" alt="Rocket" style="width:1.5%;"></p>
 </div>
 
 </body>
